--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="txt/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="https://cdn.liumingye.cn/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <title>Shorter URL</title>
+  <title>短链接生成器</title>
   <link rel="stylesheet" href="https://wjxdcmd.github.io/Url-Shorten-Worker/styles.css">
   <!-- 如果使用CDN资源就放开这一句, 把上面那一句注释掉
     <link rel="stylesheet" href="https://cdn.liumingye.cn/gh/wjxdcmd/Url-Shorten-Worker/styles.css">
@@ -13,50 +13,44 @@
 <body>
   <div class="d-flex align-items-start flex-wrap">
   <div class="card shadow m-3">
-    <h5 class="card-header">A URL Shortener created using free Cloudflare worker and KV</h5>
+    <h5 class="card-header">短链接生成器</h5>
     <div class="card-body">
       <h5 class="card-title"> </h5>
 
       <div class="input-group mb-3">
-
-          <span class="input-group-text" id="basic-addon1">Long URL</span>
-
-        <input type="text" class="form-control" id="longURL" aria-describedby="basic-addon1" placeholder="Example: https://example.com/" oninput="loadUrlList()">
+        <span class="input-group-text" id="basic-addon1">原始链接</span>
+        <input type="text" class="form-control" id="longURL" aria-describedby="basic-addon1" placeholder="例如：https://example.com/" oninput="loadUrlList()">
       </div>
 
       <div class="input-group mb-3">
-
-          <span class="input-group-text" id="basic-addon2">Custom Short URL</span>
-
-        <input type="text" class="form-control" id="keyPhrase" aria-describedby="basic-addon2" placeholder="As you wish">
+        <span class="input-group-text" id="basic-addon2">自定义短链接</span>
+        <input type="text" class="form-control" id="keyPhrase" aria-describedby="basic-addon2" placeholder="可选">
       </div>
 
       <div class="input-group mb-3">
-        <button class="btn btn-primary" type="button" onclick='shorturl()' id="addBtn">Shorten it</button>
+        <button class="btn btn-primary" type="button" onclick='shorturl()' id="addBtn">生成短链接</button>
       </div>
 
       <div class="input-group mb-3">
-
-          <span class="input-group-text" id="basic-addon3">password</span>
-
+        <span class="input-group-text" id="basic-addon3">密码</span>
         <input class="form-control" type="text" value="__PASSWORD__" readonly="true" id="passwordText" aria-describedby="basic-addon3">
       </div>
 
     </div>
     
     <div class="card-footer">
-      <span> <a href="https://github.com/wjxdcmd/Url-Shorten-Worker/" target="_self">Fork me on GitHub</a> </span>
+      <span> <a href="https://github.com/wjxdcmd/Url-Shorten-Worker/" target="_self">在Github上Fork本项目</a> </span>
     </div>
   </div>
 
   <div class="card shadow m-3">
-    <h5 class="card-header">LocalStorage List</h5>
+    <h5 class="card-header">本地存储列表</h5>
     <div class="card-body">
       <h5 class="card-title"> </h5>
       <div class="input-group mb-3">
-        <button class="btn btn-success" type="button" onclick='loadUrlList()' id="loadListBtn">load localStorage</button>
-        <button class="btn btn-danger" type="button" onclick='clearLocalStorage()' id="clearlocalStgBtn">clear localStorage</button>
-        <button class="btn btn-info" type="button" onclick='loadKV()' id="loadKV2localStgBtn">load KV to localStorage</button>
+        <button class="btn btn-success" type="button" onclick='loadUrlList()' id="loadListBtn">加载本地存储</button>
+        <button class="btn btn-danger" type="button" onclick='clearLocalStorage()' id="clearlocalStgBtn">清除本地存储</button>
+        <button class="btn btn-info" type="button" onclick='loadKV()' id="loadKV2localStgBtn">加载Cloudflare KV存储</button>
       </div>
 
       <div class="card-text">
@@ -81,13 +75,13 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="resultModalLabel">Result</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <h5 class="modal-title" id="resultModalLabel">结果</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="关闭"></button>
         </div>
-        <div class="modal-body" id="result">No result</div>
+        <div class="modal-body" id="result">无结果</div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" onclick='copyurl("result")' data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Copied!">Copy</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" onclick='copyurl("result")' data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="已复制！">复制</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">关闭</button>
         </div>
       </div>
     </div>
